@startuml

title Kernel

class KernelMain {
    +mainLoop()
}

class Buffer {
    +buf()
    +out()
}

class Memory {
    +allocate()
    +free()
}

class Palette {
    +set()
    {static}+simplePalette()
}

class Screen {
    +shape()
    +text()
    +image()
    +drawBack()
}

class TextDrawer {
    +putfonts8_asc()
    -putfont8()
}

class ShapeDrawer {
    +box()
}

class CharImageDrawer {
    +mouse()
}

class Segment {
    +setKernelSegment()
}

class SegmentDescriptorTable {
    +set()
}

class Interupt {
    +enableMouseInterupt()
    +enableKeybordInterupt()
    +enableTimerInterupt()
}

interface Interupt::Idevice {
    +onInterupt()
}

class InteruptDescriptorTable {
    +set()
}

class Pic {
    +enableInterupt()
}

class Keyboard {
    
}

class KBC {
    +setMode()
    +enableMouse()
    +getKeyCode()
}

class Mouse {

}

KernelMain --> Screen
KernelMain ---> Palette
KernelMain --> Segment
KernelMain --> Interupt
KernelMain --> Keyboard
KernelMain --> Mouse
KernelMain --> KBC
Mouse --> KBC
Keyboard --> KBC
Mouse --|> Interupt::Idevice  
Keyboard --|> Interupt::Idevice
Interupt *-- Interupt::Idevice
Screen "1" *-- "1" TextDrawer
Screen "1" *-- "1" ShapeDrawer
Screen "1" *-- "1" CharImageDrawer
Interupt "1" *-- "1" Pic
Segment "1" *-- "1" SegmentDescriptorTable
Interupt "1" *-- "1" InteruptDescriptorTable

@enduml